--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -95,7 +95,8 @@
 <ins class="adsbygoogle"
      style="display:inline-block;width:728px;height:90px"
      data-ad-client="ca-pub-2049126681125303"
-     data-ad-slot="1243058876"></ins>
+     data-ad-slot="1243058876"
+     data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
