--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,8 +2,8 @@
 <%= stylesheet_link_tag("messages.css") %>
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <script>
-  //var socket = io.connect('http://helpingchatbackend.herokuapp.com');
-  var socket = io.connect('http://localhost:8080');
+  var socket = io.connect('http://helpingchatbackend.herokuapp.com');
+  //var socket = io.connect('http://localhost:8080');
 
   // on connection to server, ask for user's name with an anonymous callback
   socket.on('connect', function(){
