--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -43,7 +43,7 @@
           <a data-toggle="modal" class="nav-link" data-target="#rules">Rules</a>
         </li>
         <li class="nav-link">
-          <a data-toggle="modal" class="nav-link" data-target="#startingquestions">Starting Questions</a>
+          <a data-toggle="modal" class="nav-link" data-target="#startingquestions">Opening Questions</a>
         </li>
 
         <li class="nav-link">
@@ -67,7 +67,7 @@
 <div class="maincontainer">
   <div class="panel panel-default chat-panel">
    <div class="panel-heading">
-    Your Chat:   <input type="button" value="Start Chatting" onclick="startnewroom()" class="btn btn-large pull-right"/>
+    Your Chat:   <input type="button" value="Start Chatting" onclick="startnewroom()" class="btn pull-right"/>
   </div>
   <div class="panel-body">
    <ul id="chat">
@@ -76,7 +76,7 @@
  <div class="panel-footer">
   <div class= "footer_inner center">
     <input id="messagetextinput" style="width:200px;" class="message chat_message"/>
-    <input type="button" id="messagesend" value="Send" />
+    <input type="button" id="messagesend" class="btn" value="Send" />
   </div>
 </div>
 </div>
@@ -104,6 +104,7 @@
       </div>
       <div class="modal-body">
         <p>
+          Hello and Welcome to Helping Chat! This website has been designed to help people that have any issue ranging from a tough desicion that they may have to make in life to someone that might be thinking about susicde. This website allows to people to chat about whats brothering them and help the other person out while helping themself at the same time.
           Hello and Welcome to Helping Chat! This website is here to help anyone that is dealing with an issue in their life. Its a simple anonmiouns chat program that allows you to talk to a random person that has an issue and you will work out both your issues together in a place where you can not be judged or anyone know who you are.If you ares till having issues after using this website please seak some help from a doctor as they can and will help you.
           <br>
           You can find me on twitter here: <a href="https://www.twitter.com/robertwildman">@Robertwildman</a>.
