--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -8,15 +8,24 @@
 	text-align: center;
 }
 .model
-    {
-        position: relative;
-    }
+{
+    position: relative;
+}
 .modal-header
 {
     background-color: #FFAE19;
     color:white;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+}
+.chat-button
+{
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.panel-heading
+{
+    height: 60px;
 }
 .nav-link
 {
@@ -275,6 +284,10 @@ body
     .adsbygoogle
     {
     margin-top: 90px;
+    }
+    .modal-dialog
+    {
+        width: 800px;
     }
 
 }
