--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -4,13 +4,35 @@
 }
 .left-option
 {
-    width:100%;
-    padding-top: 2px;
+    width:90%;
+    margin: 0 auto;
+    padding-left: 2px;
+    padding-right: 2px;
 }
 .right-option
 {
     width:100%;
     height:100%;
+}
+.chat-footer
+{
+    width:100%;
+    height:80px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
+    position: absolute;
+    bottom:0;
+    background-color: whitesmoke;
+    left:0;
+}
+.chat-input-div
+{
+    height:100%;
+}
+.pull-left
+{
+    float:left;
 }
 .maincontainer
 {
@@ -24,34 +46,31 @@
 {
     display:none;
 }
+.chat_message
+{
+    width:60%;
+    height:80%;
+    margin-top: 10px;
+}
 .column-left{
     float: left;
-    width: 20%;
-    border: solid 1px #cccccc;
+    text-align: center;
+    width: 25%;
     height:100%;
 }
 .column-right{
     float: right;
-    width: 20%;
+    width: 10%;
     height:100%;
 }
 .column-center{
     display: inline-block;
-    width: 60%;
+    width: 65%;
+    position:relative;
     height:100%;
+    border-radius: 10px;
+    border: 20px solid cadetblue;
     background-color: white;
-    border: solid 1px #cccccc;
-}
-.right-info
-{
-    width:100%;
-    height:60%;
-    border: solid 1px #cccccc;
-}
-.right-advert
-{
-    width: 100%;
-    height: 40%;
 }
 .adsbygoogle
 {
@@ -62,12 +81,33 @@
    background-color: white;
    color: #FFAE19;
 }
+.navbar-header
+{
+   background-color: whitesmoke;
+   color: #FFAE19;
+   float:none;
+}
 .navbar-brand
 {
     color:white;
-    float:left;
+    margin: 0 auto;
     font-size: 10;
-
+    padding-left:45%;
+}
+.navbar-default
+{
+    color:#fb8521;
+}
+.navbar
+{
+    background-color: whitesmoke;
+    border: none;
+}
+.brand
+{
+    font-family: 'Comfortaa', cursive;
+    font-size: 35px;
+    color: #fb8521 !important;
 }
 .nav-link{
 
@@ -84,14 +124,14 @@
 }
 .left-option-head
 {
-    background-color: #FFAE19;
+    background-color: #fb8521;
     color:white;
     padding-top: 5px;
     padding-bottom: 5px;
 }
 .chat-header
 {
-    background-color: #3B5998;
+    background-color: cadetblue;
     color:white;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -101,24 +141,55 @@
 {
     max-width: 250px;
 }
+.left-info
+{
+    margin-bottom: 20px;
+}
+.right-info
+{
+    margin-top: 25%;
+}
+.chat_message
+{
+    border-top-left-radius:10px;
+    border-top-right-radius:10px;
+    border-bottom-left-radius:10px;
+    border-bottom-right-radius:10px;
+    border:1px solid gray;
+    width:69%
+}
+
 .right-welcome-head
 {
-    background-color: #FFAE19;
+    background-color: #fb8521;
     color:white;
     padding-top: 5px;
     padding-bottom: 5px;
 }
 .modal-header
 {
-    background-color: #FFAE19;
+    background-color: #fb8521;
     color:white;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
 .chat-button
 {
-    margin-left: 5px;
-    margin-right: 5px;
+    height:100%;
+    width:15%;
+    background-color: #fb8521;
+    font-weight: 100;
+    font-size: 1.5em;
+    color:white;
+    padding:5px;
+}
+.lightcoral
+{
+    background-color: lightcoral;
+}
+.cadetblue
+{
+    background-color: cadetblue;
 }
 .panel-heading
 {
@@ -148,12 +219,15 @@ html
 }
 body
 {
-    height: 90%;
+    height: 98%;
+    font-family: 'Roboto', sans-serif;
     padding-top: 70px;
+    background-color:whitesmoke;
 }
-.chat_message
+.h4 , h4
 {
-    width: 80%;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 }
 .maincontainer
 {
@@ -217,89 +291,6 @@ body
     margin: 0 auto;
     float:none;
 }
-.collapsing {
-    -webkit-transition: none;
-    transition: none;
-}
-
-
-#wrapper {
-    padding-left: 0;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-#wrapper.toggled {
-    padding-left: 250px;
-}
-
-#sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
-    left: 250px;
-    width: 0;
-    height: 100%;
-    margin-left: -250px;
-    overflow-y: auto;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-#wrapper.toggled #sidebar-wrapper {
-    width: 250px;
-}
-
-#page-content-wrapper {
-    width: 100%;
-    position: absolute;
-}
-
-#wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -250px;
-}
-
-/* Sidebar Styles */
-
-.sidebar-nav {
-    float:left;
-    top: 0;
-    width: 250px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
-}
-
-.sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-}
-
-.sidebar-nav li a:hover {
-    text-decoration: none;
-}
-
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-    text-decoration: none;
-}
-
-.sidebar-nav > .sidebar-brand {
-    height: 65px;
-    font-size: 18px;
-    line-height: 60px;
-}
-
-
 
 
 
