--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
   ga('send', 'pageview');
 
 	</script>
-
+	<link href='http://fonts.googleapis.com/css?family=Comfortaa:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700,100' rel='stylesheet' type='text/css'>
 	<script src='https://cdn.firebase.com/js/client/2.0.4/firebase.js'></script>
 	<!-- Latest compiled and minified CSS -->
 
