Starting work on the splash screen

--- a/app/views/messages/splash.html.erb
+++ b/app/views/messages/splash.html.erb
@@ -1,7 +1,5 @@
 <!-- This is the splash screen -->
+<%= stylesheet_link_tag 'splash'%>
 <div class="maincontainer">
-  <div>
-    <h1 class = "Logotext">This is the splash screen for the helpingchat website</h1>
-
-  </div>
+    <h1 class = "brand">Helping Chat</h1>
 </div>
