--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<%= stylesheet_link_tag 'messages'%>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <script>
   //var socket = io.connect('http://helpingchatbackend.herokuapp.com');
