--- a/app/views/messages/splash.html.erb
+++ b/app/views/messages/splash.html.erb
@@ -2,4 +2,20 @@
 <%= stylesheet_link_tag 'splash'%>
 <div class="maincontainer">
     <h1 class = "brand">Helping Chat</h1>
+    <p class="splash-info">
+    	 Hello and Welcome to Helping Chat! I hope that you are feeling good today but if your not don't worry their is many people going though the same as you or similarly and their waiting to chat about their issue and yours so you can help make each other feel better.
+          <br>
+          <br>
+          You will be able to chat to someone that may have been though something like you are currently going though and they might be able to give you some help and advice on how you can feel better and help you get out of the dark spire that you may be in. At the same time you will be helping them if their issues.
+          <br>
+          <br>
+          If you want to give feedback about the website please tweet me or email me.
+          <br>
+          Twitter: <a href="https://www.twitter.com/robertwildman">@Robertwildman</a>.
+          <br>
+          Email: <a href="mailto:robertwildman@helpingchat.com?subject=Website Feedback">robertwildman@helpingchat.com</a>.
+          <br>
+          <br>
+          Please Share Helping Chat as you might be able to help someone that needs to chat about whats currently going though their mind!
+    </p>
 </div>
